--- a/학생용/01 - 넘파이 기초.ipynb
+++ b/학생용/01 - 넘파이 기초.ipynb
@@ -707,30 +707,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "-fsZhQe8DLyf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12, 13, 14, 15, 16],\n",
+       "       [17, 18, 19, 20, 21, 22]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "# 배열 만들기\n",
     "a = np.array([[11, 12, 13, 14], \n",
     "              [15, 16, 17, 18], \n",
     "              [19, 20, 21, 22]])\n",
     "\n",
     "# 배열 형태 확인\n",
-    "\n",
+    "a.shape\n",
     "\n",
     "# (4, ?))형태의 2차원 배열\n",
-    "\n",
+    "a1=a.reshape(4,-1)\n",
     "\n",
     "# 확인\n",
-    "\n",
+    "a1\n",
     "\n",
     "# (2, ?) 형태의 2차원 배열\n",
+    "a2=a.reshape(2,-1)\n",
     "\n",
-    "\n",
-    "# 확인\n"
+    "# 확인\n",
+    "a2"
    ]
   },
   {
@@ -2164,7 +2179,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2179,6 +2194,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
